[project]
name = "kub"
version = "0.6.1"
description = "A python library to interface with the KUB api"
authors = [{name = "Jack Powell", email = "jackattack51@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kub"]
