[project]
name = "kub"
version = "0.6.2"
description = "A python library to interface with the KUB api"
authors = [{name = "Jack Powell", email = "jackattack51@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
